# gui-user

./: .gitignore  .mcp.json  LICENSE  PLAN-external-computer-use.md  README.md  gui_user.py  pyproject.toml  requirements.txt  spike_atspi.py  spike_atspi2.py  spike_atspi3.py  stop-display.sh  view-display.sh
.claude-plugin/: plugin.json
server/: __init__.py  accessibility.py  deps.py  display.py  errors.py  harness.py  input.py  main.py  process.py  screenshot.py  script_runner.py  wait.py  window.py
tests/: test_integration.py  test_local_display.py
