[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gui-user"
version = "2.0.0"
description = "MCP server for external computer-use: launch, observe, and interact with any X11 application via AT-SPI2 and xdotool."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "PyGObject>=3.42.0",
    "Pillow>=9.0.0",
]

[project.scripts]
gui-user-mcp = "server.main:main"
